tests/paczka2/big_fuzzy/55011616.err
Error in line 9: SGwfKsS80hu S244 85,7
Error in line 8: EoeFqI0W S244 11,4
Error in line 26: yEiY S960 18,5
Error in line 29: SGwfKsS80hu S970 51,8
Error in line 41: uvZsMVflnXj S970 24,9
Error in line 39: S960 S960 73,1
Error in line 25: EoeFqI0W S244 141,0
Error in line 47: EoeFqI0W A193 64,3
Error in line 52: yEiY A1R3 16,2
Error in line 53: HhtriG A193 30,4
Error in line 73: RAh A193 11,3
Error in line 67: HhtriG S244 26,4
Error in line 74: RAh S960 92,4
Error in line 85: HhtriG S960 4,7
Error in line 100: S960 A193 57,6
Error in line 102: S960 S960 30,0
Error in line 106: uvZsMVflnXj S960 2,4
Error in line 110: yEiY A193 58,2
Error in line 88: HhtriG S244 22,1
Error in line 116: uvZsMVflnXj S970 89,6
Error in line 120: uvZsMVflnXj S960 77,59
Error in line 103: RAh A193 106,0
Error in line 121: RAh S244 16,1
Error in line 131: SGwfKsS80hu S960 0,6
Error in line 141: yEiY S244 12,3
Error in line 152: EoeFqI0W S960 91,7
Error in line 158: SGwfKsS80hu S960 38,0
Error in line 150: uvZsMVflnXj S960 25,1
Error in line 164: EoeFqI0W S244 38,6
Error in line 166: RAh S970 93,1
Error in line 163: uvZsMVflnXj S244 79,7
Error in line 172: uvZsMVflnXj S970 65,0
Error in line 183: yEiY S960 -1,2
Error in line 184: uvZsMVflnXj S244 53,7
Error in line 185: uvZsMVflnXj A193 99,9
Error in line 177: EoeFqI0W A193 63,7
Error in line 186: uvZsMVflnXj S244 85,0
Error in line 181: yEiY S960 78,1
Error in line 197: uvZsMVflnXj S244 80,0
Error in line 201: S960 S970 43,7
Error in line 205: S960 S244 87,8
Error in line 215: uvZsMVflnXj A193 ]37,9
Error in line 192: EoeFqI0W S960 98,2
Error in line 232: yEiY S970 74,1
Error in line 230: SGwfKsS80hu S970 96,8
Error in line 239: yEiY A193 30,1
